# cd2flac

./: CMakeLists.txt  example.ini
cmake/: FindAVDEVICE.cmake  FindCDDB.cmake  FindINIH.cmake  FindSWRESAMPLE.cmake
src/: 163.cpp  163.h  INIReader.cpp  INIReader.h  VERSION.cmake  cd2flac.rc.in  cd2flac_version.h.in  config.h.in  core.cpp  core.h  cue.cpp  cue.h  cue_track_list.h  info.c  info.h  main.cpp  music_brain_z.cpp  music_brain_z.h  open.c  open.h
